--- a/src/app/features/dashboard/components/transfert/transfert.component.html
+++ b/src/app/features/dashboard/components/transfert/transfert.component.html
@@ -63,7 +63,7 @@
           <input
             required
             (input)="onInput()"
-            type="number"
+            type="text"
             matInput
             id="reciverAccountNumber"
             formControlName="reciverAccountNumber"
