--- a/src/app/features/admin-dashboard/main/main.component.scss
+++ b/src/app/features/admin-dashboard/main/main.component.scss
@@ -1,41 +1,60 @@
-.header {
-  background: #f5f5f5;
-  padding: 0 10px;
-  .title {
-    font-weight: bold;
-    width: 30%;
-    margin: 0 10px 0 0;
-    font-size: 18px;
+.admin-dash {
+  .header {
+    background: #f5f5f5;
+    padding: 0 10px;
+    .title {
+      font-weight: bold;
+      width: 30%;
+      margin: 0 10px 0 0;
+      font-size: 18px;
+    }
+    .other-options {
+      width: 100%;
+      justify-content: space-between;
+      .form-fields {
+        font-size: 14px;
+        height: 56px;
+        margin: 6px 7px;
+        cursor: pointer;
+      }
+      .account-types {
+        max-width: 170px !important;
+        min-width: 170px !important;
+      }
+      .account-status {
+        max-width: 130px !important;
+        min-width: 130px !important;
+      }
+      .datepicker {
+        max-width: 140px !important;
+        min-width: 140px !important;
+      }
+      .do-transaction-btn {
+        max-width: 150px !important;
+        min-width: 150px !important;
+        padding: 0 5px;
+      }
+      .search-field {
+        max-width: 200px !important;
+        min-width: 200px !important;
+      }
+    }
   }
-  .other-options {
-    width: 100%;
-    justify-content: space-between;
-    .form-fields {
-      font-size: 14px;
-      height: 56px;
-      margin: 6px 7px;
-      cursor: pointer;
-    }
-    .account-types {
-      max-width: 170px !important;
-      min-width: 170px !important;
-    }
-    .account-status {
-      max-width: 130px !important;
-      min-width: 130px !important;
-    }
-    .datepicker {
-      max-width: 140px !important;
-      min-width: 140px !important;
-    }
-    .do-transaction-btn {
-      max-width: 150px !important;
-      min-width: 150px !important;
-      padding: 0 5px;
-    }
-    .search-field {
-      max-width: 200px !important;
-      min-width: 200px !important;
+  .transaction-table {
+    padding: 30px 70px 0 70px;
+    .not-transaction-yet {
+      text-align: center;
+      width: 100%;
+      margin-top: 25vh;
+      font-size: 1.4rem;
     }
   }
+}
+.menu-btn-accepte::ng-deep span {
+  font-weight: bold;
+  color: #00dfa2;
+}
+.menu-btn-reject::ng-deep span {
+  font-weight: bold;
+  color: #ff0060;
 }
