--- a/src/app/features/dashboard/components/transactions/transactions.component.html
+++ b/src/app/features/dashboard/components/transactions/transactions.component.html
@@ -99,7 +99,7 @@
           {{ element.createAt | date : "M/d/y" }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="status" style="margin-right: -100px">
+      <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let element" style="width: 100%">
           <span
