add pagination filter

--- a/src/app/features/dashboard/components/transactions/transactions.component.html
+++ b/src/app/features/dashboard/components/transactions/transactions.component.html
@@ -136,7 +136,7 @@
     [showFirstLastButtons]="false"
     [pageSizeOptions]="pageSizeOptions"
     [hidePageSize]="false"
-    [pageIndex]="pageIndex"
+    [pageIndex]="currentPage"
     aria-label="Select page"
   >
   </mat-paginator>
