--- a/src/app/features/admin-dashboard/main/main.component.html
+++ b/src/app/features/admin-dashboard/main/main.component.html
@@ -133,4 +133,19 @@
       Aucun utilisateur n'a effectué de transaction pour le moment !
     </div>
   </div>
+  <mat-paginator
+    *ngIf="!(datasources?.length == 0)"
+    #paginator
+    class="demo-paginator"
+    (page)="handlePageEvent($event)"
+    [length]="length"
+    [pageSize]="pageSize"
+    [disabled]="false"
+    [showFirstLastButtons]="false"
+    [pageSizeOptions]="pageSizeOptions"
+    [hidePageSize]="false"
+    [pageIndex]="currentPage"
+    aria-label="Select page"
+  >
+  </mat-paginator>
 </div>
