--- a/src/app/features/dashboard/components/transactions/transactions.component.html
+++ b/src/app/features/dashboard/components/transactions/transactions.component.html
@@ -113,7 +113,7 @@
       <ng-container matColumnDef="createAt">
         <th mat-header-cell *matHeaderCellDef>Date de transaction</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.createAt | date : "M/d/y" }}
+          {{ element.createAt | date : "d/M/y" }}
         </td>
       </ng-container>
       <ng-container matColumnDef="status">
