add recharge page

--- a/src/app/features/dashboard/components/transactions/transactions.component.html
+++ b/src/app/features/dashboard/components/transactions/transactions.component.html
@@ -73,11 +73,7 @@
         >
           Transfert
         </button>
-        <button
-          (click)="doTransfert()"
-          mat-menu-item
-          style="margin-right: 50px"
-        >
+        <button (click)="doRecharge()" mat-menu-item style="margin-right: 50px">
           Recharger un compte
         </button>
       </mat-menu>
